--- a/Abstract.tex
+++ b/Abstract.tex
@@ -1,6 +1,5 @@
 \chapter*{}
-
-
+\vspace{-6 cm}
 \section*{Résumé}
 L’imagerie par résonnance magnétique (IRM) permet maintenant d’observer différents types
 de tissus avec des résolutions de plus en plus fines. L’arbre vasculaire artériel et veineux est explorable
@@ -23,10 +22,9 @@ correspondante. Grâce aux données d’imagerie IRM, les compartiments sanguins
 veines, le parenchyme cérébral et le système ventriculaire sont inclus. Le modèle permet de simuler la
 répartition des flux et des pressions dans les différents compartiments de la vascularisation du patient
 ainsi que d’évaluer les effets d’occlusions localisées sur l’ensemble de l’architecture.\\
-
 {\bf Mots clefs: biomarqueurs, IRM multimodale, modélisation, hydrodynamique intracrânienne, QSM,
 ASL}
-
+\vspace{-0.5 cm}
 \section*{Abstract}
 The magnetic resonance imaging (MRI) allows the observation of various kind of tissues with
 always increasing resolution. The arterial and venous vascular trees can be explored, and the flows can
