--- a/Main.tex
+++ b/Main.tex
@@ -31,7 +31,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%   			Liste des fichiers à compiler					%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	\includeonly{Abstract,Remerciements,Chapitre1,Chapitre2,Chapitre3,Chapitre4,Chapitre5,Chapitre6,Chapitre7,Chapitre8,Annexes}
+	\includeonly{Abstract,Remerciements,abreviations,Chapitre1,Chapitre2,Chapitre3,Chapitre4,Chapitre5,Chapitre6,Chapitre7,Chapitre8,Annexes}
  
 
 
@@ -83,6 +83,7 @@
 
 	\include{Remerciements}
 	\include{Abstract}
+	\include{abreviations}
 	\includefrom{rep_Chapitre1/}{Chapitre1}	
 	\includefrom{rep_Chapitre2/}{Chapitre2} 		
 	\includefrom{rep_Chapitre3/}{Chapitre3}	
