--- a/Chapitre3.tex
+++ b/Chapitre3.tex
@@ -218,7 +218,7 @@ Dans une première étape, nous réalisons une segmentation sur la base de l’i
 Les volumes de ces territoires permettent grâces aux rapports issues de littérature d’estimer les volumes des compartiments : 
 \begin{equation}
 \label{eq:volumesac}
-V_{c}\,=\,\bigl(V_{s}\, *\,d_{c-a}\bigr)\, *\,\frac{V_{Ref_{c}}}{V_{Ref_{c}}*V_{Ref_{a}}},
+V_{c}\,=\,\bigl(V_{s}\, *\,d_{c-a}\bigr)\, *\,\frac{V_{Ref_{c}}}{V_{Ref_{c}}+V_{Ref_{a}}},
 \end{equation}
 avec $V_c$ et $V_a$  les volumes des capillaires et des artérioles, $V_s$ le volume segmenté, $d_{c-a}$ la densité estimée d'artérioles et de capillaires dans un volume (selon~\cite{Moody2004}), et les $V_{ref}$ associés étant les volumes moyens des compartiments issus de la littérature.
 Pour les veinules, nous n’avons pas l’information de densité. Le volume est donc estimé sur la base des volumes capillaires et artériolaires précédemment trouvés en résolvant : 
