--- a/Preambule.tex
+++ b/Preambule.tex
@@ -282,7 +282,7 @@
       \hfill
       \includegraphics[width=0.15\textwidth]{logo_CHU}\\
     \vspace{1cm}
-      {\Large \'{E}cole doctorale L2S}\\
+      {\Large \'{E}cole doctorale I2S}\\
     \vspace{0.5cm}
       {\huge 
     \vspace{0.5cm}
